適切なタグの追記

--- a/profile/index.html
+++ b/profile/index.html
@@ -5,14 +5,15 @@
     <title>自己紹介</title>
 </head>
 
-<body>
-    <h1>氏名</h1>
-    <p>野﨑俠</p>
-    <h1>趣味・好きなこと</h1>
+<h1>氏名</h1>
+<p>野﨑俠</p>
+<h1>趣味・好きなこと</h1>
+<ul>
     <li>寝ること</li>
     <li>Dead by Daylightをすること</li>
-    <a href="https://deadbydaylight.com/ja/" target="_blank"><img src="img/dbd.jpg" alt="dbd画像"width="300"height="200"></a>
-    
+    <a href="https://deadbydaylight.com/ja/" target="_blank"><img src="img/dbd.jpg" alt="dbd画像" width="300"
+            height="200"></a>
+</ul>
 </body>
 
 </html>
