--- a/profile/index.html
+++ b/profile/index.html
@@ -2,15 +2,17 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="profile-style.css">
     <title>自己紹介</title>
 </head>
-
-<h1>氏名</h1>
-<p>野﨑俠</p>
+<div class="text-bleu bg-red">
+    <h1>氏名</h1>
+    <p>野﨑俠</p>
+</div class="bg-red">
 <h1>趣味・好きなこと</h1>
 <ul>
-    <li>寝ること</li>
-    <li>Dead by Daylightをすること</li>
+    <li class="text-blue">寝ること</li>
+    <li><span>deadbydaylight</span>をすること</li>
     <a href="https://deadbydaylight.com/ja/" target="_blank"><img src="img/dbd.jpg" alt="dbd画像" width="300"
             height="200"></a>
 </ul>
