headタグの修正

--- a/table/table.html
+++ b/table/table.html
@@ -1,61 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<head>
+
 <body>
+    <link rel="stylesheet" href="table-style.css">
 
     <head>
-        <link rel="stylesheet" href="table-style.css">
         <title>表の作成</title>
-        <table>
-            <caption>好きなキラー</caption>
-            <thead>
-                <tr>
-                    <th>キラー</th>
-                    <th>名前</th>
-                    <th>移動速度</th>
-                    <th>能力</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th><a href="https://deadbydaylight.com/ja/game/characters/the-huntress/" target="_blank"><img
-                                src="img/hanntoresu.jpg" alt="hann画像"> </th>
-                    <td>ハントレス</td>
-                    <td>4.4ms</td>
-                    <td>狩猟用手斧<br>
-                        儀式開始時に5つの狩猟用手斧を持っている。<br>
-                        手斧は恐ろしいほどの精度で投げることができ、ロッカーで補充が可能。</td>
-
-                </tr>
-                <tr>
-                    <th><a href="https://deadbydaylight.com/ja/game/characters/the-ghost-face/" target="_blank"><img
-                                src="img/gofe.jpg" alt="ゴッフェ画像"> </th>
-                    <td>ゴーストフェイス</td>
-                    <td>4.6ms</td>
-                    <td>闇の包容<br>
-                        探知不可の状態になり、脅威範囲と赤い光が消える。<br>
-                        この状態で生存者を尾行してマーキングすると、一撃でダウンさせられる無防備状態にできる。<br>
-                        尾行のタイミングを戦略的に図り、絶好の攻撃の機会を逃さないようにしよう。<br>
-                        生存者は視線上にゴーストフェイスを捉えることで「闇の包容」を解除することができるため要注意。</td>
-                </tr>
-                <tr>
-                    <th><a href="https://deadbydaylight.com/ja/game/characters/the-executioner/" target="_blank"><img
-                                src="img/sa.png" alt="エクセ画像"> </th>
-                    <td>エクセキューショナー</td>
-                    <td>4.6ms</td>
-                    <td>裁きの儀式<br>
-                        地面にトレイルを刻み、そこを通った生存者を煩悶状態にする。<br>
-                        また「裁きの儀式」が発動中、三角頭は遠隔攻撃「地獄の罰」を繰り出すことができる。</td>
-
-
-                </tr>
-            </tbody>
-        </table>
-
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     </head>
+
+    <table>
+        <caption>好きなキラー</caption>
+        <thead>
+            <tr>
+                <th>キラー</th>
+                <th>名前</th>
+                <th>移動速度</th>
+                <th>能力</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <th><a href="https://deadbydaylight.com/ja/game/characters/the-huntress/" target="_blank"><img
+                            src="img/hanntoresu.jpg" alt="hann画像"> </th>
+                <td>ハントレス</td>
+                <td>4.4ms</td>
+                <td>狩猟用手斧<br>
+                    儀式開始時に5つの狩猟用手斧を持っている。<br>
+                    手斧は恐ろしいほどの精度で投げることができ、ロッカーで補充が可能。</td>
+
+            </tr>
+            <tr>
+                <th><a href="https://deadbydaylight.com/ja/game/characters/the-ghost-face/" target="_blank"><img
+                            src="img/gofe.jpg" alt="ゴッフェ画像"> </th>
+                <td>ゴーストフェイス</td>
+                <td>4.6ms</td>
+                <td>闇の包容<br>
+                    探知不可の状態になり、脅威範囲と赤い光が消える。<br>
+                    この状態で生存者を尾行してマーキングすると、一撃でダウンさせられる無防備状態にできる。<br>
+                    尾行のタイミングを戦略的に図り、絶好の攻撃の機会を逃さないようにしよう。<br>
+                    生存者は視線上にゴーストフェイスを捉えることで「闇の包容」を解除することができるため要注意。</td>
+            </tr>
+            <tr>
+                <th><a href="https://deadbydaylight.com/ja/game/characters/the-executioner/" target="_blank"><img
+                            src="img/sa.png" alt="エクセ画像"> </th>
+                <td>エクセキューショナー</td>
+                <td>4.6ms</td>
+                <td>裁きの儀式<br>
+                    地面にトレイルを刻み、そこを通った生存者を煩悶状態にする。<br>
+                    また「裁きの儀式」が発動中、三角頭は遠隔攻撃「地獄の罰」を繰り出すことができる。</td>
+
+
+            </tr>
+        </tbody>
+    </table>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
 
 
 </body>
