--- a/form/register.html
+++ b/form/register.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="register-style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>登録ホームの入力</title>
+    <title>登録フォーム</title>
 </head>
 
 <body>
