--- a/box/box-layout.html
+++ b/box/box-layout.html
@@ -30,6 +30,8 @@
                 よりパワーアップしたド派手アクションをひっさげ、独裁者エスピノーサと対峙するという内容だ。
                 リゾートビーチに砂漠、雪山、都市部と、地域ごとに全く異なる雰囲気の景色が楽しめるソリス。</p>
         </div>
+    </div>
+    <div class="box">
         <div class="item">
             <h2>DEAD BY DAYLIGHT</h2>
             <div class="i"><img src="img/dbd.jpg" alt="dbd"></div>
@@ -47,6 +49,8 @@
                 期待のオープンワールド時代劇アクションアドベンチャー</p>
 
         </div>
+    </div>
+    <div class="box">
         <div class="item">
             <h2>ELDEN RING</h2>
             <div class="i"><img src="img/elden.jpg" alt="elden"></div>
